# rust_crud

./: .env  Cargo.toml  README.md
src/: models.rs  schema.rs
templates/: list.html.hbs  new.html.hbs  update.html.hbs
