[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_codegen = "0.5.1"
diesel = { version = "2.2.6", features = ["postgres"] }
dotenv = "0.15.0"
rocket-multipart-form-data = "0.10.7"
serde = { version = "1.0.215", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["handlebars_templates"]